# aepipe

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  wrangler.toml  wrangler.toml.example
sdk/javascript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/javascript/src/: client.ts  index.ts  types.ts
sdk/javascript/src/__tests__/: client.test.ts  integration.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/aepipe/: __init__.py  client.py  types.py
sdk/python/tests/: test_client.py  test_integration.py
skills/query-aepipe/: SKILL.md
skills/query-aepipe/scripts/: aepipe_client.py  query_processor.py  setup_config.py
src/: index.ts  ingest.ts  query.ts  store.ts
