[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aepipe-sdk"
version = "0.1.0"
description = "Python SDK for aepipe — multi-tenant log ingestion and query"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/loadchange/aepipe"
Repository = "https://github.com/loadchange/aepipe"

[tool.setuptools.packages.find]
include = ["aepipe*"]
